--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npm run db:migrate && next build",
     "start": "next start",
     "build-stats": "cross-env ANALYZE=true npm run build",
     "clean": "rimraf .next .swc out coverage",
@@ -13,14 +13,31 @@
     "check-types": "tsc --noEmit --pretty && tsc --project cypress --noEmit --pretty",
     "test": "jest",
     "commit": "cz",
-    "prepare": "husky install"
+    "db:generate": "drizzle-kit generate:sqlite",
+    "db:push": "drizzle-kit push:sqlite",
+    "db:migrate": "tsx ./scripts/dbMigrate.ts",
+    "db:studio": "dotenv -c -- drizzle-kit studio",
+    "cypress": "cypress open",
+    "cypress:headless": "cypress run",
+    "e2e": "start-server-and-test dev http://localhost:3000 cypress",
+    "e2e:headless": "start-server-and-test dev http://localhost:3000 cypress:headless",
+    "prepare": "husky install",
+    "postbuild": "next-sitemap",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.23.5",
+    "@hookform/resolvers": "^3.3.1",
+    "@libsql/client": "^0.3.4",
     "@t3-oss/env-nextjs": "^0.6.1",
+    "drizzle-orm": "^0.28.6",
     "next": "13.4.19",
+    "next-seo": "^6.1.0",
+    "next-sitemap": "^4.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.46.1",
     "zod": "^3.22.2"
   },
   "devDependencies": {
@@ -28,15 +45,36 @@
     "@commitlint/config-conventional": "^17.7.0",
     "@commitlint/cz-commitlint": "^17.7.1",
     "@next/bundle-analyzer": "^13.4.19",
+    "@percy/cli": "^1.27.1",
+    "@percy/cypress": "^3.1.2",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@storybook/addon-essentials": "^7.4.2",
+    "@storybook/addon-interactions": "^7.4.2",
+    "@storybook/addon-links": "^7.4.2",
+    "@storybook/addon-onboarding": "^1.0.8",
+    "@storybook/blocks": "^7.4.2",
+    "@storybook/nextjs": "^7.4.2",
+    "@storybook/react": "^7.4.2",
+    "@storybook/test-runner": "^0.13.0",
+    "@storybook/testing-library": "^0.2.1",
+    "@testing-library/cypress": "^10.0.1",
+    "@testing-library/jest-dom": "^6.1.3",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.5",
     "@types/node": "20.6.1",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@types/testing-library__cypress": "^5.0.10",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
     "autoprefixer": "10.4.15",
     "commitizen": "^4.3.0",
     "cross-env": "^7.0.3",
+    "cypress": "^13.2.0",
     "dotenv-cli": "^7.3.0",
+    "drizzle-kit": "^0.19.13",
+    "encoding": "^0.1.13",
     "eslint": "8.49.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.1.0",
@@ -56,11 +94,18 @@
     "eslint-plugin-tailwindcss": "^3.13.0",
     "eslint-plugin-testing-library": "^6.0.1",
     "eslint-plugin-unused-imports": "^3.0.0",
+    "http-server": "^14.1.1",
     "husky": "^8.0.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^14.0.1",
+    "npm-run-all": "^4.1.5",
     "postcss": "8.4.29",
+    "prettier": "^3.0.3",
     "rimraf": "^5.0.1",
     "semantic-release": "^22.0.0",
+    "start-server-and-test": "^2.0.0",
+    "storybook": "^7.4.2",
     "tailwindcss": "3.3.3",
     "tsx": "^3.12.10",
     "typescript": "5.2.2"
