feat(auth and dashboard): with clerk
Global Database with Turso

BREAKING CHANGE: Authentication with Clerk

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,11 +23,17 @@
       }
     ]
   },
+  "parser": "@typescript-eslint/parser",
   "overrides": [
     // Configuration for TypeScript files
     {
       "files": ["**/*.ts", "**/*.tsx"],
-      "plugins": ["@typescript-eslint", "unused-imports", "tailwindcss", "simple-import-sort"],
+      "plugins": [
+        "@typescript-eslint",
+        "unused-imports",
+        "tailwindcss",
+        "simple-import-sort"
+      ],
       "extends": [
         "plugin:tailwindcss/recommended",
         "airbnb",
@@ -42,7 +48,16 @@
         "prettier/prettier": [
           "error",
           {
+            "arrowParens": "avoid",
+            "bracketSpacing": true,
+            "jsxSingleQuote": false,
+            "printWidth": 100,
+            "quoteProps": "as-needed",
+            "semi": false,
             "singleQuote": true,
+            "tabWidth": 2,
+            "trailingComma": "none",
+            "useTabs": false,
             "endOfLine": "auto"
           }
         ],
@@ -54,13 +69,21 @@
         "@next/next/no-img-element": "off", // We currently not using next/image because it isn't supported with SSG mode
         "@typescript-eslint/comma-dangle": "off", // Avoid conflict rule between Eslint and Prettier
         "@typescript-eslint/consistent-type-imports": "error", // Ensure `import type` is used when it's necessary
-        "no-restricted-syntax": ["error", "ForInStatement", "LabeledStatement", "WithStatement"], // Overrides Airbnb configuration and enable no-restricted-syntax
+        "no-restricted-syntax": [
+          "error",
+          "ForInStatement",
+          "LabeledStatement",
+          "WithStatement"
+        ], // Overrides Airbnb configuration and enable no-restricted-syntax
         "import/prefer-default-export": "off", // Named export is easier to refactor automatically
         "simple-import-sort/imports": "error", // Import configuration for `eslint-plugin-simple-import-sort`
         "simple-import-sort/exports": "error", // Export configuration for `eslint-plugin-simple-import-sort`
         "@typescript-eslint/no-unused-vars": "off",
         "unused-imports/no-unused-imports": "error",
-        "unused-imports/no-unused-vars": ["error", { "argsIgnorePattern": "^_" }]
+        "unused-imports/no-unused-vars": [
+          "error",
+          { "argsIgnorePattern": "^_" }
+        ]
       }
     },
     // Configuration for testing
